--- a/src/downloadData.ipynb
+++ b/src/downloadData.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -75,10 +75,178 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fecha: 2017-09-27 09:26:57.659011\n",
-      "2017-09-27 09:26:57.659011\n",
-      "fecha: 2017-09-27 09:29:44.677115\n",
-      "2017-09-27 09:29:44.677115\n"
+      "fecha: 2017-09-28 00:00:13.191112\n",
+      "2017-09-28 00:00:13.191112\n",
+      "fecha: 2017-09-28 00:17:46.461775\n",
+      "2017-09-28 00:17:46.461775\n",
+      "fecha: 2017-09-28 00:33:41.646607\n",
+      "2017-09-28 00:33:41.646607\n",
+      "fecha: 2017-09-28 00:49:32.857504\n",
+      "2017-09-28 00:49:32.857504\n",
+      "fecha: 2017-09-28 01:05:20.936895\n",
+      "2017-09-28 01:05:20.936895\n",
+      "fecha: 2017-09-28 01:21:10.128246\n",
+      "2017-09-28 01:21:10.128246\n",
+      "fecha: 2017-09-28 01:36:56.693935\n",
+      "2017-09-28 01:36:56.693935\n",
+      "fecha: 2017-09-28 01:52:47.901735\n",
+      "2017-09-28 01:52:47.901735\n",
+      "fecha: 2017-09-28 02:08:33.886171\n",
+      "2017-09-28 02:08:33.886171\n",
+      "fecha: 2017-09-28 02:24:19.030811\n",
+      "2017-09-28 02:24:19.030811\n",
+      "fecha: 2017-09-28 02:40:03.915993\n",
+      "2017-09-28 02:40:03.915993\n",
+      "fecha: 2017-09-28 02:55:50.518502\n",
+      "2017-09-28 02:55:50.518502\n",
+      "fecha: 2017-09-28 03:11:39.052845\n",
+      "2017-09-28 03:11:39.052845\n",
+      "fecha: 2017-09-28 03:27:23.675388\n",
+      "2017-09-28 03:27:23.675388\n",
+      "fecha: 2017-09-28 03:43:06.063667\n",
+      "2017-09-28 03:43:06.063667\n",
+      "fecha: 2017-09-28 03:58:52.832070\n",
+      "2017-09-28 03:58:52.832070\n",
+      "fecha: 2017-09-28 04:14:36.981889\n",
+      "2017-09-28 04:14:36.981889\n",
+      "fecha: 2017-09-28 04:30:20.326017\n",
+      "2017-09-28 04:30:20.326017\n",
+      "fecha: 2017-09-28 04:46:02.482498\n",
+      "2017-09-28 04:46:02.482498\n",
+      "fecha: 2017-09-28 05:01:45.263721\n",
+      "2017-09-28 05:01:45.263721\n",
+      "fecha: 2017-09-28 05:17:44.326689\n",
+      "2017-09-28 05:17:44.326689\n",
+      "fecha: 2017-09-28 05:33:27.354541\n",
+      "2017-09-28 05:33:27.354541\n",
+      "fecha: 2017-09-28 05:49:16.911424\n",
+      "2017-09-28 05:49:16.911424\n",
+      "fecha: 2017-09-28 06:05:00.415414\n",
+      "2017-09-28 06:05:00.415414\n",
+      "fecha: 2017-09-28 06:20:46.248945\n",
+      "2017-09-28 06:20:46.248945\n",
+      "fecha: 2017-09-28 06:36:35.739498\n",
+      "2017-09-28 06:36:35.739498\n",
+      "fecha: 2017-09-28 06:52:22.739248\n",
+      "2017-09-28 06:52:22.739248\n",
+      "fecha: 2017-09-28 07:08:07.271021\n",
+      "2017-09-28 07:08:07.271021\n",
+      "fecha: 2017-09-28 07:23:59.175692\n",
+      "2017-09-28 07:23:59.175692\n",
+      "fecha: 2017-09-28 07:39:46.983579\n",
+      "2017-09-28 07:39:46.983579\n",
+      "fecha: 2017-09-28 07:55:38.102874\n",
+      "2017-09-28 07:55:38.102874\n",
+      "fecha: 2017-09-28 08:11:26.265525\n",
+      "2017-09-28 08:11:26.265525\n",
+      "fecha: 2017-09-28 08:27:19.915984\n",
+      "2017-09-28 08:27:19.915984\n",
+      "fecha: 2017-09-28 08:43:12.172582\n",
+      "2017-09-28 08:43:12.172582\n",
+      "fecha: 2017-09-28 08:59:09.646283\n",
+      "2017-09-28 08:59:09.646283\n",
+      "fecha: 2017-09-28 09:15:03.303865\n",
+      "2017-09-28 09:15:03.303865\n",
+      "fecha: 2017-09-28 09:30:59.659954\n",
+      "2017-09-28 09:30:59.659954\n",
+      "fecha: 2017-09-28 09:46:55.901737\n",
+      "2017-09-28 09:46:55.901737\n",
+      "fecha: 2017-09-28 10:02:53.431534\n",
+      "2017-09-28 10:02:53.431534\n",
+      "fecha: 2017-09-28 10:18:55.978250\n",
+      "2017-09-28 10:18:55.978250\n",
+      "fecha: 2017-09-28 10:34:59.571424\n",
+      "2017-09-28 10:34:59.571424\n",
+      "fecha: 2017-09-28 10:51:06.420526\n",
+      "2017-09-28 10:51:06.420526\n",
+      "fecha: 2017-09-28 11:07:21.696002\n",
+      "2017-09-28 11:07:21.696002\n",
+      "fecha: 2017-09-28 11:23:34.493763\n",
+      "2017-09-28 11:23:34.493763\n",
+      "fecha: 2017-09-28 11:39:50.660840\n",
+      "2017-09-28 11:39:50.660840\n",
+      "fecha: 2017-09-28 11:56:04.776875\n",
+      "2017-09-28 11:56:04.776875\n",
+      "fecha: 2017-09-28 12:12:08.472976\n",
+      "2017-09-28 12:12:08.472976\n",
+      "fecha: 2017-09-28 12:28:15.965314\n",
+      "2017-09-28 12:28:15.965314\n",
+      "fecha: 2017-09-28 12:44:38.589903\n",
+      "2017-09-28 12:44:38.589903\n",
+      "fecha: 2017-09-28 13:00:43.901065\n",
+      "2017-09-28 13:00:43.901065\n",
+      "fecha: 2017-09-28 13:16:55.468973\n",
+      "2017-09-28 13:16:55.468973\n",
+      "fecha: 2017-09-28 13:33:03.470549\n",
+      "2017-09-28 13:33:03.470549\n",
+      "fecha: 2017-09-28 13:49:14.033655\n",
+      "2017-09-28 13:49:14.033655\n",
+      "fecha: 2017-09-28 14:05:25.270753\n",
+      "2017-09-28 14:05:25.270753\n",
+      "fecha: 2017-09-28 14:21:36.483386\n",
+      "2017-09-28 14:21:36.483386\n",
+      "fecha: 2017-09-28 14:37:54.254580\n",
+      "2017-09-28 14:37:54.254580\n",
+      "fecha: 2017-09-28 14:54:07.108570\n",
+      "2017-09-28 14:54:07.108570\n",
+      "fecha: 2017-09-28 15:10:23.947326\n",
+      "2017-09-28 15:10:23.947326\n",
+      "fecha: 2017-09-28 15:26:29.043797\n",
+      "2017-09-28 15:26:29.043797\n",
+      "fecha: 2017-09-28 15:42:36.986361\n",
+      "2017-09-28 15:42:36.986361\n",
+      "fecha: 2017-09-28 15:59:08.014254\n",
+      "2017-09-28 15:59:08.014254\n",
+      "fecha: 2017-09-28 16:15:36.906563\n",
+      "2017-09-28 16:15:36.906563\n",
+      "fecha: 2017-09-28 16:31:54.831416\n",
+      "2017-09-28 16:31:54.831416\n",
+      "fecha: 2017-09-28 16:48:14.177254\n",
+      "2017-09-28 16:48:14.177254\n",
+      "fecha: 2017-09-28 17:04:24.797759\n",
+      "2017-09-28 17:04:24.797759\n",
+      "fecha: 2017-09-28 17:20:38.998946\n",
+      "2017-09-28 17:20:38.998946\n",
+      "fecha: 2017-09-28 17:36:58.493782\n",
+      "2017-09-28 17:36:58.493782\n",
+      "fecha: 2017-09-28 17:53:07.753976\n",
+      "2017-09-28 17:53:07.753976\n",
+      "fecha: 2017-09-28 18:09:32.771952\n",
+      "2017-09-28 18:09:32.771952\n",
+      "fecha: 2017-09-28 18:26:12.117892\n",
+      "2017-09-28 18:26:12.117892\n",
+      "fecha: 2017-09-28 18:42:41.681966\n",
+      "2017-09-28 18:42:41.681966\n",
+      "fecha: 2017-09-28 18:59:31.345619\n",
+      "2017-09-28 18:59:31.345619\n",
+      "fecha: 2017-09-28 19:18:35.932004\n",
+      "2017-09-28 19:18:35.932004\n",
+      "fecha: 2017-09-28 19:36:58.102099\n",
+      "2017-09-28 19:36:58.102099\n",
+      "fecha: 2017-09-28 19:56:23.621099\n",
+      "2017-09-28 19:56:23.621099\n",
+      "fecha: 2017-09-28 20:16:39.411985\n",
+      "2017-09-28 20:16:39.411985\n",
+      "fecha: 2017-09-28 20:37:23.876839\n",
+      "2017-09-28 20:37:23.876839\n",
+      "fecha: 2017-09-28 21:00:32.426498\n",
+      "2017-09-28 21:00:32.426498\n",
+      "fecha: 2017-09-28 21:23:11.915991\n",
+      "2017-09-28 21:23:11.915991\n",
+      "fecha: 2017-09-28 21:44:17.649828\n",
+      "2017-09-28 21:44:17.649828\n",
+      "fecha: 2017-09-28 22:07:06.956680\n",
+      "2017-09-28 22:07:06.956680\n",
+      "fecha: 2017-09-28 22:30:46.619923\n",
+      "2017-09-28 22:30:46.619923\n",
+      "fecha: 2017-09-28 22:53:40.825810\n",
+      "2017-09-28 22:53:40.825810\n",
+      "fecha: 2017-09-28 23:13:56.395439\n",
+      "2017-09-28 23:13:56.395439\n",
+      "fecha: 2017-09-28 23:33:08.811340\n",
+      "2017-09-28 23:33:08.811340\n",
+      "fecha: 2017-09-28 23:51:26.919031\n",
+      "2017-09-28 23:51:26.919031\n"
      ]
     }
    ],
@@ -97,10 +265,10 @@
     "#inicia el loop para cargar data\n",
     "#cambiar hora 10a 0 y hour por day\n",
     "while True:\n",
-    "    if datetime.datetime.now().hour == 9:\n",
+    "    if datetime.datetime.now().hour == 0:\n",
     "        \n",
     "        #mientras el dia actual sea menor al limite\n",
-    "        while datetime.datetime.now().minute < 30:\n",
+    "        while datetime.datetime.now().day < 29:\n",
     "            \n",
     "            fecha = datetime.datetime.now()\n",
     "            print 'fecha:',fecha\n",
@@ -120,8 +288,8 @@
     "                \n",
     "            #espera 15 min\n",
     "            print fecha\n",
-    "            #sleep(60*15)\n",
-    "            sleep(60)\n",
+    "            sleep(60*15)\n",
+    "            #sleep(60)\n",
     "        break\n",
     "    else:\n",
     "        sleep(60)\n",
@@ -136,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -173,14 +341,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "geometria.fecha = geometria.fecha.map(str)\n",
-    "geometria.to_file('../data/test')"
+    "geometria.to_file('../data/28Septiembre')"
    ]
   },
   {
